Include stacked LUNA in the TerraScanServiceImpl result